# AlfaBet_Scheduler

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 0c554dbfbdf1_initial_migration.py  62371373c321_initial_migration.py  67dccc64bd1c_added_created_by_foreign_key.py  a6ec9782ef89_removed_creator_relationship.py  e1f57170cf01_added_subscription_model.py  ed1fa739ccc4_adding_relationship_to_user_model.py
app/: auth.py  background_tasks.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: test_auth.py  test_background_tasks.py  test_crud.py  test_models.py  test_schemas.py
